--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -16,6 +16,7 @@
     </div>
     <div class=" subHeaderContent">
       <h2 class="page-title">{{ _("Discovery") }} </h2>
+
       <div class="col-md-9">
       <div class="row">
       <div class="col-md-10 col-xs-12 filter-content">
@@ -24,9 +25,10 @@
           <span role="button" class="filterItem fa fa-twitter " ng-click="back_to_tweets();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _(' Tweets')}} 
            </span>
            <span role="button" class="filterItem fa fa-group "  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _(' Influencers')}}</span>
+           <!-- <span role="button" class="filterItem fa fa-group "  ng-click="get_best_tweets();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _(' Best Posts')}}</span> -->
+          
           
 <span role="button" class="filterItem fa fa-map-marker " ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _(' Map')}}</span>
-
           <!--span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
 
           
@@ -46,9 +48,12 @@
                 </ul>
           </div> -->
         <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{_('Filter by')}} </span> {{_('Tags')}}</span>
+        
       </div>
      
+     
       </div>
+      
 
       </div>
         
