--- a/static/hopscotch/css/hopscotch.css
+++ b/static/hopscotch/css/hopscotch.css
@@ -400,17 +400,22 @@ div.hopscotch-bubble.no-number .hopscotch-bubble-content {
   margin: 0;
 }
 div.hopscotch-bubble .hopscotch-bubble-close {
-  color: #000;
-  background: transparent url(../img/sprite-green.png) -192px -92px no-repeat;
+
+  color: #1565C0;
+  background-color: transparent url(../img/sprite-green.png) 0 0 no-repeat;
   display: block;
   padding: 8px;
   position: absolute;
   text-decoration: none;
-  text-indent: -9999px;
+  text-indent: -20px;
+  
   width: 8px;
   height: 8px;
   top: 0;
   right: 0;
+
+
+
 }
 div.hopscotch-bubble .hopscotch-bubble-close.hide,
 div.hopscotch-bubble .hopscotch-bubble-close.hide-all {
@@ -418,7 +423,7 @@ div.hopscotch-bubble .hopscotch-bubble-close.hide-all {
 }
 div.hopscotch-bubble .hopscotch-bubble-number {
   background: transparent url(../img/sprite-green.png) 0 0 no-repeat;
-  color: #fff;
+  color: #64B5F6;
   display: block;
   float: left;
   font-size: 17px;
