--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -200,7 +200,7 @@
           <div class="textbody">
               <div class="pitch">
                 <a href="/#/discovers/show/<%= tweet_map._source.id %>" target="new"  >
-                <p  class="contact-title"> <%=tweet_map._source.user.description%>
+                <p  class="contact-title"> <%=tweet_map._source.text%>
                 </p>
               </a>
               </div>
