Add Email Signature when sending am email from ioGrow , fix #1677 , add adress to export csv file
Former-commit-id: 3648a96e274235a75823677ba530fd5594fb9bc4 [formerly 5857a5d3fc39e00fd1ce9a97524f0fc470b0d971] [formerly c85fed2c116e7edd49f41efe445502e95cb6202b [formerly 4209a24313a665489cf602b49dcc65ff94db255e]]
Former-commit-id: 0c746012eb8ee271662c8623000093608a1a54dc [formerly 8f6cd4fded76dd2d26ca2989e2f11eafd4852984]
Former-commit-id: e9a6bb04bfe4f36e3f4d3c1662419d5315444497

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -46,6 +46,7 @@
   </div>
   <div  class="row">
     <div class="col-md-9">
+     <input type="hidden" value="{{user.emailSignature}}" id="signature"/>
       <div class="row">
         <div class="showPage custom-show margin-bottom-15  col-md-12">
           <div class="row margin-bottom-10">
@@ -70,6 +71,9 @@
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==4}">
                     <a ng-click="waterfall(); selectedTab = 4;">{{ _('Update your Logo')}}</a>
+                  </li>
+                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==5}">
+                    <a ng-click="waterfall(); selectedTab =5;">{{ _('Email signature')}}</a>
                   </li>
 
 
@@ -227,7 +231,38 @@
 
 
                       </div>
+                             <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 5" style="display: none;">
+                  <div class="row cards-container" style="
+    background-color: white;
+    margin-right: -2px !important; 
+    margin-left: 0px !important;
+">
+         
+                    <div class="col-md-12" >
+                            <div class="row">
+            
+                        <div class="modal-body">
+                        <h3>Gmail Integration</h3>
+                        <p> Send email from ioGrow using your Gmail account <br> You've connected ioGrow to <b>{{user.email}}</b> .</p> 
+                         <p><b>Signature</b> </p>
+                         <form  class="ng-pristine ng-invalid ng-invalid-required">
+                     
+                            <div class="form-group text-form-group">
+                                <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}"  class="form-control" rows="7"></textarea>
+                            </div>
+                        </form>
+                      </div>
+                              </div><!--/inner-cards-container-->
+                      </div>
+                      <div class="btn-group relbutton pull-right">
+                      <button  ng-click="addSignature()" id="sample_editable_1_new" class="btn red" style="margin-right: 20px;">
+                               {{_("Save Signature ")}}<i class="icon-plus"></i>
+                      </button>
+                    </div>
+                            </div>
 
+
+                      </div>
 
 
 
