--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -47,6 +47,7 @@
     <div class="row">
         <div class="col-md-9">
             <div class="row">
+             <input type="hidden" value="{{user.emailSignature}}" id="signature"/>
                 <div class="showPage custom-show margin-bottom-15  col-md-12">
                     <div class="row margin-bottom-10">
                         <div class="col-md-2" ng-mouseenter="showUpload = true" ng-mouseleave="showUpload = false">
