--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -71,7 +71,7 @@ window._fbq.push(['track', '6026368632186', {'value':'0.01','currency':'USD'}]);
         <div class="column column-right with-copy">
           <div class="copy text-left">
             <h1 class="section-headline heading-headline allow-orphan">
-              Start your free trial
+              Start Using ioGrow
             </h1>
             <p>
               Just fill out the form below and you’re in!
