--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -98,7 +98,7 @@ if (window.location.host != "localhost")
         </div></a></span>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
+        <img alt="A simple social CRM for small businesses on Google" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
             <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank">Install ioGrow Chrome Extension</a>
@@ -119,7 +119,7 @@ if (window.location.host != "localhost")
       <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="images/home/intro.jpg" style="height: 882px; background-image: url(http://storage.googleapis.com/iogrow-gs/intro-1600.jpg);"></div>
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -165px; opacity: 1;">
         <div class="one-whole">
-          <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
+          <img alt="A simple social CRM for small businesses on Google" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading together">
            Get Customers from Social Media, and Organize your Sales Process
 
@@ -171,7 +171,7 @@ if (window.location.host != "localhost")
       <section class="section-filetypes js-hinted-fullscreen" style="height: 307px;">
         <div class="content">
           <div class="column column-left with-example">
-            <img src="http://storage.googleapis.com/iogrow-cdn/iogrow_screenshot.png" width="100%">
+            <img src="http://storage.googleapis.com/iogrow-cdn/iogrow_screenshot.png" width="100%" alt="Social Discovery to Grow your business">
           </div>
           <div class="column column-right with-copy">
             <div class="copy text-left" id="startDiscovery">
@@ -193,7 +193,7 @@ if (window.location.host != "localhost")
       <section class="section-filesanywhere js-hinted-fullscreen" style="height: 407px;">
         <div class="content">
           <div class="column column-right with-example">
-            <img src="http://storage.googleapis.com/iogrow-gs/static/iogrow_linkedin.png" width="100%">
+            <img src="http://storage.googleapis.com/iogrow-gs/static/iogrow_linkedin.png" width="100%" alt="generate leads from LinkedIn">
           </div>
           <div class="column column-left with-copy">
             <div class="copy text-left">
@@ -212,7 +212,7 @@ if (window.location.host != "localhost")
       <section class="section-filetypes js-hinted-fullscreen" style="height: 307px;">
         <div class="content">
           <div class="column column-left with-example">
-            <img src="http://storage.googleapis.com/iogrow-gs/devices.jpg" width="100%">
+            <img src="http://storage.googleapis.com/iogrow-gs/devices.jpg" width="100%" alt="Everything you need in your business, all in one place">
           </div>
           <div class="column column-right with-copy">
             <div class="copy text-left">
