--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
 
   <link href="/static/build/css/sync_styles.min.css" rel="stylesheet" type="text/css"/>
   <!--  end GLOBAL CSS Sync Files -->
-  
-  <link href="/static/build/css/custom_css.min.css" rel="stylesheet" type="text/css"/>
+  <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
   <!--<link href="/static/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href='/static/plugins/fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print' />-->
 
@@ -430,9 +429,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 
-var ROOT = '/_ah/api';
+//var ROOT = '/_ah/api';
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
