--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -4,12 +4,12 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
+    <meta content="social CRM for small businesses on Google. With iOgrow, easily generate leads, also from LinkedIn, organize sales process, get users and customers from Twitter" name="description">
+
     <meta content="ioGrow - A simple social CRM for small businesses on Google" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="Lead generation and sales process organization" property="og:description">
-    <title>
-      ioGrow - A simple social CRM for small businesses on Google
+    <title>Social CRM for small business on Google, leads from linkedIn | iOgrow
     </title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
@@ -98,7 +98,7 @@ if (window.location.host != "localhost")
         </div></a></span>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
+        <img alt="Drive logo" title="CRM and Lead generation" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
             <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank">Install ioGrow Chrome Extension</a>
@@ -119,7 +119,7 @@ if (window.location.host != "localhost")
       <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="images/home/intro.jpg" style="height: 882px; background-image: url(http://storage.googleapis.com/iogrow-gs/intro-1600.jpg);"></div>
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -165px; opacity: 1;">
         <div class="one-whole">
-          <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
+          <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading together">
            A simple social CRM for small businesses on Google
           </h1>
@@ -171,8 +171,9 @@ if (window.location.host != "localhost")
       <section class="section-filetypes js-hinted-fullscreen" style="height: 307px;">
         <div class="content">
           <div class="column column-left with-example">
-            <img src="http://storage.googleapis.com/iogrow-cdn/iogrow_screenshot.png" width="100%">
+            <img title="Sales process" src="http://storage.googleapis.com/iogrow-cdn/iogrow_screenshot.png" width="100%">
           </div>
+
           <div class="column column-right with-copy">
             <div class="copy text-left" id="startDiscovery">
               <h2 class="heading-headline">
@@ -223,7 +224,7 @@ if (window.location.host != "localhost")
       <section class="section-filesanywhere js-hinted-fullscreen" style="height: 407px;">
         <div class="content">
           <div class="column column-right with-example">
-            <img src="http://storage.googleapis.com/iogrow-gs/static/iogrow_linkedin.png" width="100%">
+            <img title="Linkedin CRM" src="http://storage.googleapis.com/iogrow-gs/static/iogrow_linkedin.png" width="100%">
           </div>
           <div class="column column-left with-copy">
             <div class="copy text-left">
@@ -243,7 +244,7 @@ if (window.location.host != "localhost")
       <section class="section-filetypes js-hinted-fullscreen" style="height: 307px;">
         <div class="content">
           <div class="column column-left with-example">
-            <img src="http://storage.googleapis.com/iogrow-gs/devices.jpg" width="100%">
+            <img title="Startups" src="http://storage.googleapis.com/iogrow-gs/devices.jpg" width="100%">
           </div>
           <div class="column column-right with-copy">
             <div class="copy text-left">
@@ -309,7 +310,7 @@ if (window.location.host != "localhost")
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
           <div class="one-whole" id="pricing" style="text-align:center;">
-          <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png"/>
+          <img title="ioGrow Social CRM" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png"/>
         <h1 class="section-headline section-headline-large section-headline-gray heading-headline">Built on Google, CRM ioGrow is free for the first 10 000 users !
             </h1>
             <br>
